fix(rule): support jump to action detail page

--- a/src/style/rule.scss
+++ b/src/style/rule.scss
@@ -192,6 +192,9 @@
       }
     }
   }
+  a.io-item {
+    color: unset;
+  }
   .btn-add {
     margin-top: 24px;
     :deep(span) {
